# bazel-ptypes-issue

./: .gitignore  BUILD.bazel  WORKSPACE
a/: BUILD.bazel  a.go  a.proto
b/: BUILD.bazel  b.proto
