load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "b_proto",
    srcs = ["b.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//a:a_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "b_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "example.com/example/b",
    proto = ":b_proto",
    visibility = ["//visibility:public"],
    deps = ["//a"],
)

go_library(
    name = "b",
    embed = [":b_go_proto"],
    importpath = "example.com/example/b",
    visibility = ["//visibility:public"],
)
